added calculator test

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <script src="./code/reverse.js"></script> -->
+    <!-- <script src="./code/calculator.js"></script> -->
   </body>
 </html>
