--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
   </head>
   <body>
-    <!-- <script src="./code/caesarCypher.js"></script> -->
+    <script src="./code/analyzeArray.js"></script>
   </body>
 </html>
